Craig - fix dropdown menu styles so that it doesn't trigger horizontal scroll in closed state

--- a/src/less/dropdowns.less
+++ b/src/less/dropdowns.less
@@ -16,10 +16,12 @@
 
 .dropdown.open {
   .dropdown__menu {
-    //display: block;
+    clip: auto;
+    height: auto;
     opacity: 1;
     transform: translateY(.4rem);
     visibility: visible;
+    width: auto;
   }
 
   .dropdown__menu--top {
@@ -123,7 +125,9 @@
   border: 1px solid @dropdown-border;
   border-radius: @border-radius-base;
   box-shadow: @dropdown-menu-shadow;
+  clip: rect(0, 0, 0, 0);
   display: block;
+  height: 0;
   left: 0;
   margin: .2rem 0 0;
   max-width: 28rem;
@@ -134,6 +138,7 @@
   top: 90%;
   transition: opacity 250ms @trans-timing-cubic, transform 500ms @trans-timing-cubic;
   visibility: hidden;
+  width: 0;
   will-change: opacity, transform;
   z-index: @zindex-dropdown;
 
